# stonks_cli

./: .gitignore  .rustfmt.toml  Cargo.toml
data/: nasdaqlisted.txt
src/: api.rs  cli.rs  main.rs  util.rs
src/api/: client.rs  endpoint.rs  mod.rs
src/cli/: arg_parser.rs  cache.rs  event.rs  loader.rs  mod.rs  options.rs  symbols.rs  ui.rs
src/data/: mod.rs  options.rs  quote.rs  series.rs  symbols.rs  watchlist.rs
