[package]
name = "stonks_cli"
version = "0.1.0"
authors = ["Matt Boran <mattboran@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
dotenv = "0.15.0"
reqwest = "0.10.6"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
tokio = {"version"= "0.2", features=["rt-threaded", "macros"]}