[package]
name = "stonks_cli"
version = "0.1.0"
authors = ["Matt Boran <mattboran@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
structopt = "0.3.13"
dotenv = "0.15.0"
reqwest = "0.10.6"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
tokio = {"version"= "0.2", features=["rt-threaded", "macros", "blocking"]}
chrono = "0.4"
ftp = "3.0"
futures = "0.3"